tests/spec/emit/snapshots/map_new_unknown_value_explicit_type_args.snap
---
source: tests/spec/emit/prelude.rs
assertion_line: 436
description: "input: \nfn test() {\n  let mut m = Map.new<string, Unknown>()\n  m[\"key\"] = \"value\"\n}\n"
---
package main

func test() {
	m := make(map[string]any)
	m["key"] = "value"
}
