tests/spec/emit/snapshots/nested_array_map_key_propagates_comparable_bound.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct Box<K> {
    table: Map<K, int>,
  }
  
  fn f<T>(b: Box<Array<T, 2>>) -> int {
    b.table.length()
  }
---
package main

type Box[K comparable] struct {
	table map[K]int
}

func f[T comparable](b Box[[2]T]) int {
	return len(b.table)
}
