tests/spec/emit/snapshots/nested_array_type.snap
---
source: tests/spec/emit/arrays.rs
description: "\nfn grid() -> Array<Array<int, 3>, 2> {\n  [[1, 2, 3], [4, 5, 6]]\n}\n"
---
package main

func grid() [2][3]int {
	return [2][3]int{[3]int{1, 2, 3}, [3]int{4, 5, 6}}
}
