tests/spec/emit/snapshots/newtype_assignment_from_underlying_value_casts.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct UserId(int)\n\nfn raw() -> int { 1 }\n\nfn take(u: UserId) {\n  let _ = u\n}\n\nfn test() {\n  let mut id = UserId(0)\n  id = raw() as UserId\n  take(id)\n}\n"
---
package main

type UserId int

func raw() int {
	return 1
}

func take(u UserId) {
	_ = u
}

func test() {
	id := UserId(0)
	id = UserId(raw())
	take(id)
}
