tests/spec/emit/snapshots/newtype_struct_field_from_underlying_value_casts.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct UserId(int)\nstruct Box { v: UserId }\n\nfn test(i: int) -> Box {\n  Box { v: i as UserId }\n}\n"
---
package main

type UserId int

type Box struct {
	v UserId
}

func test(i int) Box {
	return Box{v: UserId(i)}
}
