tests/spec/emit/snapshots/newtype_typed_let_from_underlying_call_casts.snap
---
source: tests/spec/emit/expressions.rs
description: "input: \nstruct UserId(int)\n\nfn raw() -> int { 1 }\n\nfn take(u: UserId) {\n  let _ = u\n}\n\nfn test() {\n  let id: UserId = raw() as UserId\n  take(id)\n}\n"
---
package main

type UserId int

func raw() int {
	return 1
}

func take(u UserId) {
	_ = u
}

func test() {
	id := UserId(raw())
	take(id)
}
