tests/spec/emit/snapshots/package_local_option_alias_does_not_collide_with_prelude_option.snap
---
source: tests/spec/emit/imports.rs
description: "input: \nimport \"go:example.com/validator\"\n\nfn test() {\n  let _ = validator.WithOption()\n}\n"
---
package main

import "example.com/validator"

func test() {
	_ = validator.WithOption()
}
