tests/spec/emit/snapshots/phantom_generic_in_struct_key_stays_unbounded.snap
---
source: tests/spec/emit/arrays.rs
description: |
  
  struct Phantom<T> {
    n: int,
  }
  
  fn f<T>(m: Map<Phantom<T>, int>) -> int {
    m.length()
  }
---
package main

type Phantom[T any] struct {
	n int
}

func f[T any](m map[Phantom[T]]int) int {
	return len(m)
}
