tests/spec/emit/snapshots/raw_string_multiline_with_backtick_falls_back_to_double_quoted.snap
---
source: tests/spec/emit/literals.rs
assertion_line: 584
description: "input: fn test() -> string {\n  r\"line1\nhas `tick\nline3\"\n}\n"
---
package main

func test() string {
	return "line1\nhas `tick\nline3"
}
